Working on spacing and bugs -CMS

--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -218,6 +218,12 @@ label {
     background: var(--button);
 }
 
+.fname {
+    margin-top: 10px;
+    height: 45px;
+    width: 250px;
+}
+
 
 @keyframes animateright {
     from{right: -300px; opacity: 0}
